# usage-tracker

./: .gitignore  .prettierrc  AGENTS.md  UsageTracker.spec  module.py  pyproject.toml  tailwind.config.js  web_gui.py
.github/: README.MD
.github/workflows/: build.yml
ui/: index.html
